# bscm-gdbus-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_build.sh
include/: BluetoothDevice.h  BluetoothManager.h  Common.h  GattCharacteristic.h  NotificationHandler.h
src/: BluetoothDevice.cpp  BluetoothManager.cpp  Common.cpp  GattCharacteristic.cpp  NotificationHandler.cpp  main.cpp
